# umbral

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE-APACHE  LICENSE-MIT  PYTHON_PACKAGING_SPEC.md  README.md
.github/workflows/: ci.yml
crates/umbral-cli/: Cargo.toml
crates/umbral-cli/src/: main.rs
crates/umbral-cli/src/commands/: add.rs  build.rs  init.rs  install.rs  mod.rs  pip.rs  publish.rs  python.rs  remove.rs  resolve.rs  run.rs  sync.rs  tool.rs  venv.rs
crates/umbral-cli/tests/: integration.rs
crates/umbral-installer/: Cargo.toml
crates/umbral-installer/src/: build.rs  lib.rs
crates/umbral-lockfile/: Cargo.toml
crates/umbral-lockfile/benches/: lockfile.rs
crates/umbral-lockfile/src/: lib.rs
crates/umbral-pep440/: Cargo.toml
crates/umbral-pep440/benches/: parsing.rs
crates/umbral-pep440/src/: lib.rs  package_name.rs  specifier.rs  version.rs
crates/umbral-pep508/: Cargo.toml
crates/umbral-pep508/src/: lib.rs  marker.rs  requirement.rs
crates/umbral-project/: Cargo.toml
crates/umbral-project/src/: dependency_groups.rs  lib.rs  validation.rs  workspace.rs
crates/umbral-project/tests/fixtures/: flask.toml  ruff.toml
crates/umbral-pypi-client/: Cargo.toml
crates/umbral-pypi-client/src/: cache.rs  client.rs  error.rs  html.rs  json.rs  lib.rs  metadata.rs  tags.rs  wheel.rs
crates/umbral-resolver/: Cargo.toml
crates/umbral-resolver/benches/: resolution.rs
crates/umbral-resolver/src/: .error.rs.pending-snap  error.rs  lib.rs  live.rs  mock.rs  package.rs  provider.rs  range_conv.rs  version.rs
crates/umbral-resolver/tests/: scenarios.rs
crates/umbral-venv/: Cargo.toml
crates/umbral-venv/src/: lib.rs  python_download.rs
tests/fixtures/: conflict_project.toml
tests/fixtures/complex/: pyproject.toml
tests/fixtures/simple/: pyproject.toml
tests/fixtures/with-dep-groups/: pyproject.toml
tests/fixtures/with-extras/: pyproject.toml
