[package]
name = "umbral-lockfile"
version = "0.4.0"
description = "uv.lock file format: read/write uv-compatible lockfiles"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
toml_edit = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "lockfile"
harness = false
