[package]
name = "umbral-resolver"
version = "0.4.0"
description = "PubGrub-based dependency resolver with human-readable error messages"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
umbral-pep440 = { workspace = true }
umbral-pep508 = { workspace = true }
umbral-pypi-client = { workspace = true }
pubgrub = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "resolution"
harness = false
