[package]
name = "umbral-venv"
version = "0.4.0"
description = "Pure-Rust virtual environment creation and Python interpreter discovery"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
umbral-pep440 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
