[project]
name = "complex-app"
version = "2.5.0"
description = "A complex application with extras, dependency groups, and scripts."
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "httpx>=0.26",
    "alembic>=1.13",
]
dynamic = ["classifiers"]

[project.optional-dependencies]
redis = ["redis>=5.0"]
postgres = ["asyncpg>=0.29", "psycopg[binary]>=3.1"]
all = [
    "redis>=5.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
]

[project.scripts]
complex-app = "complex_app.cli:main"
complex-worker = "complex_app.worker:main"

[project.gui-scripts]
complex-gui = "complex_app.gui:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest>=8.0", "pytest-asyncio>=0.23", "coverage[toml]>=7.4"]
lint = ["ruff>=0.2", "mypy>=1.8"]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    "pre-commit>=3.6",
    "ipython>=8.20",
]
